--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Stock</title>
+    <title>Blimp Animator</title>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -10,7 +10,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/renderer.js"></script>
     <script type="text/javascript" src="js/webview.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
     <style>
     html,body
@@ -66,7 +65,9 @@
              <button onclick="rectangleView()" title="Crear un cuadrado"><i class="fa fa-square-o"></i></button>
              <button onclick="imageView()" title="Importar una imagen"><i class="fa fa-picture-o"></i></button>
              <button onclick="textView()" title="Insertar una caja de texto"><i class="fa fa-font"></i></button>
-             <button onclick="htmlView()" title="Insertar un trzo de código personalizado"><i class="fa fa-code"></i></button>
+             <button onclick="multimediaView('audio')" title="Inserta un audio"><i class="fa fa-music"></i></button>
+             <button onclick="multimediaView('video')" title="Inserta un video"><i class="fa fa-film"></i></button>
+             <button onclick="htmlView()" title="Insertar un trozo de código personalizado"><i class="fa fa-code"></i></button>
              <div class="separator"></div>
              <button title="Reproduce la animación"><i class="fa fa-play"></i></button>
              <button title="Construye la animación en HTML/CSS"><i class="fa fa-cog"></i></button>
@@ -74,6 +75,13 @@
                 <button id="elm-relative" title="Posición relativa al cuerpo del documento"><i class="fa fa-th" aria-hidden="true"></i></button>
                 <button id="elm-absolute" title="Posición absoluta al cuerpo del documento"><i class="fa fa-dot-circle-o" aria-hidden="true"></i></button>
                 <button id="elm-fixed" title="Posición fija a la ventana del documento"><i class="fa fa-thumb-tack" aria-hidden="true"></i></button>
+             </div>
+             <div class="right-elemento" style="display:none;">
+               <!--<i class="fa fa-eye-slash" aria-hidden="true"></i>-->
+              <button id="elm-visible" title="Visible/Invisible el elemento"><i class="fa fa-eye" aria-hidden="true"></i></button>
+             </div>
+             <div class="right-library" style="display:none;">
+               <button id="elm-import" title="Importar un contenido multimedia"><i class="fa fa-upload" aria-hidden="true"></i><span style="font-size:11px;margin-left:5px;">Importar Medio</span></button>
              </div>
           </div>
           <div class="row" style="height:60%;">
@@ -88,6 +96,20 @@
                 <span id="titulo" class="nombre">div#nombre.espacio</span>
                 <span>ID</span><input class="elm id_elm" type="text" />
                 <span>Clase</span><input class="elm class_elm" class="end" type="text" />
+                <div class="elm-imagen"><span>Fuente</span><input class="elm src_elm" type="text" />
+                <button class="smallbtn" onclick="PonerImagen('.src_elm','todo')">...</button></div>
+                <div class="elm-audio elm-video">
+                  <span>Controles</span>
+                  <select>
+                    <option value="true" class="elm controls_elm">Sí</option>
+                    <option value="false" class="elm controls_elm">No</option>
+                  </select>
+                  <span>Autoplay</span>
+                  <select>
+                    <option value="true" class="elm autoplay_elm">Sí</option>
+                    <option value="false" class="elm autoplay_elm">No</option>
+                  </select>
+                </div>
                 <span>Visible</span>
                 <select>
                   <option class="elm visibility_elm">visible</option>
