Commit del viernes

--- a/src/htmlcode.html
+++ b/src/htmlcode.html
@@ -75,7 +75,7 @@
         amdRequire(['vs/editor/editor.main'], function() {
             var editor = monaco.editor.create(document.getElementById('container'), {
                 value: [
-                    '<h1>Hello Word!</h1>',
+                    '<h1>Hello World!</h1>',
                     'Pon aqui el código HTML que quiere añadir'
                 ].join('\n'),
                 language: 'html'
