Added zIndex in property panel [Merge required for workplace, be careful]

--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,9 @@
                     <option value="false" class="elm autoplay_elm">No</option>
                   </select>
                 </div>
+                <span>Orden</span>
+                <input type="number" min="0" max="999" class="elm z-index_elm" />
+                <span style="padding-top: 11px;width:12px;position: absolute;">Z</span>
                 <span>Visible</span>
                 <select>
                   <option class="elm visibility_elm">visible</option>
