Añadido  calculo automatico de duration y comenzo de nuevo fotograma clave, y eye dropper funciona muy bien, icono guardar añadido sin funcion todavia

--- a/src/index.html
+++ b/src/index.html
@@ -220,6 +220,8 @@
           <div id="timeline" class="row back-black" style="position: relative;z-index:5;">
             <div id="timeline-control">
               <div class="keyframe_control">
+                <button style="padding-right: 7px;margin-right:-5px;" id="save_frame" title="Guardar fotograma clave"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+                <div style="display:inline-block;vertical-align: middle" class="separator"></div>
                 <button id="del_frame" title="Eliminar fotograma clave"><i class="fa fa-times"></i></button>
                 <button id="add_frame" title="Añadir fotograma clave"><i class="fa fa-plus"></i></button>
               </div> 
